# pdf-cropper

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
static/: app.js  index.html  style.css
