[project]
name = "pdf-cropper"
version = "0.1.0"
description = "Locally-hosted web app for cropping PDF pages"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
pdf-cropper = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
